--- a/src/main/java/uk/ncl/CSC8016/jackbergus/coursework/marking_scheme2122.tex
+++ b/src/main/java/uk/ncl/CSC8016/jackbergus/coursework/marking_scheme2122.tex
@@ -72,9 +72,20 @@ you are assigned an API that you need to implement. Such an API is provided both
 	\end{itemize}
 	
 	\section*{Submission Requirements}
-	\begin{itemize}
+	\begin{enumerate}
 		\item \texttt{BankFacade} and \texttt{TransactionCommands} should be extended.
 		\item Submit the code as a zipped \textit{Maven} project. with \textbf{no} \textit{jar} and \textit{classes}. The source code will be recompiled from scratch, and no jar/class is going to be run.
+		 
+		\item If you want to use an external Java library, please consider the following:
+		\begin{itemize}
+			\item The Java library should be explicitly described as a \texttt{<dependency>} in the \texttt{pom.xml} file, and should only access the libraries from the default \textit{Maven Central Repository}.
+			\item A library might provide single concurrency mechanisms primitives, but not ready-made solutions already composing those: semaphores, monitors, locks, just logs, thread barriers, thread pools, passing le baton mechanisms are allowed. Code reuse from the exercises and examples seen in class is permitted.
+			
+			\item Systems completely solving the coursework for you are \textbf{strictly prohibited}: e.g., any kind of (data) management system having concurrency control (ensuring safe concurrent thread access to any data representation) and supporting concurrent transactions (implementing any kind of transaction protocol, either pessimistic or optimistic) \textbf{must be avoided}, as they both implement commit/aborts and thread-safe operations on data. 
+			\item None of the (direct or indirect) dependencies of the coursework should rely on external servers or processes to run or to be installed.
+			\item The solution should \textbf{not} include external jar files.
+			\item If unsure whether the solution might be exploited, please ask before submitting.
+		\end{itemize}
 		 
 		\item Attached to the source code, please provide a short report motivating the compliance of the source code to each point and sub-point of the marking scheme. The report should also state what is the name of the class of the class extending \texttt{BankFacade} and its package.
 		
@@ -82,7 +93,7 @@ you are assigned an API that you need to implement. Such an API is provided both
 		
 		uk.ncl.CSC8016.jackbergus.coursework.wrongimplementation.WrongBankWithLocks
 
-	\end{itemize}
+	\end{enumerate}
 
 
 	\section*{Marking Scheme}
@@ -97,7 +108,7 @@ you are assigned an API that you need to implement. Such an API is provided both
 			\end{itemize}
 			\item [+15\%:] After committing a transaction, the results provides the total changes into the account.
 			\begin{itemize}
-				\item The returned commit information should contain at least one transaction
+				\item The returned commit information should contain at least one \textit{Operation} of \textit{OperationType}.
 				\item After paying money into the account, the final total amount is the sum of the previous amount of money and the amount being paid.
 				\item I cannot re-commit or abort a closed transaction.
 				\item The successful operations should contain all of the operations before the commit, as well as the commit.
@@ -150,7 +161,7 @@ you are assigned an API that you need to implement. Such an API is provided both
 	\item \textbf{[+2\%]} The student exploited the optimistic transaction principle, and the operations were logged in a journal (either in primary memory or in secondary memory).
 	\item \textbf{[+2\%]} Usage of monitors or multithreaded producers and consumers (semaphores might be also exploited).
 	\item \textbf{[+3\%]} Thread pools are used to handle multiple requests from multiple users.
-	\item \textbf{[+3\%]} Transactions are implemented by exploiting already existing solutions (e.g., JVSTM).
+	\item \textbf{[+3\%]} Any Java library imported via \texttt{pom.xml} `not violating the 3\textsuperscript{rd} Submission Requirement.
 	\item  \textbf{[+4\%]} In addition to the previous point, bank thread crashes are also tolerated, e.g., all of the transactions are assumed to be aborted, and the bank journal is stored on disk. 
 \end{itemize}
 	\end{itemize}
