--- a/src/main/java/uk/ncl/CSC8016/jackbergus/coursework/marking_scheme2122.tex
+++ b/src/main/java/uk/ncl/CSC8016/jackbergus/coursework/marking_scheme2122.tex
@@ -118,7 +118,7 @@ you are assigned an API that you need to implement. Such an API is provided both
 				\item I can always withdraw $0.0$ money from my account.
 				\item I can never withdraw an amount of money which is greater than the amount at my disposal.
 				\item The commit should list all of the operations, thus including the attempt to overdraft.
-				\item The operation causing the overdraft shall not consider as an unsuccessful operation.
+				\item The operation causing the overdraft shall not consider as an unsuccessful operation, rather than an \textit{ignored} one.
 			\end{itemize}
 	
 		\end{description}
