--- a/src/main/java/uk/ncl/CSC8016/jackbergus/coursework/project2/marking_scheme2223.tex
+++ b/src/main/java/uk/ncl/CSC8016/jackbergus/coursework/project2/marking_scheme2223.tex
@@ -6,6 +6,7 @@
 \usepackage{parskip}
 \usepackage{graphicx}
 
+\usepackage{newpxtext,newpxmath}
 \usepackage[tagged, highstructure]{accessibility}
 % Margins
 \usepackage[top=2.5cm, left=3cm, right=3cm, bottom=4.0cm]{geometry}
@@ -23,57 +24,48 @@
 %%%%%%%%%%%%%%%%%
 \title{Coursework CSC8016}
 \author{Giacomo Bergami}
-\date{26\textsuperscript{th} of April, 2022}
+\date{24\textsuperscript{th} of April, 2023}
 
 \begin{document}
 	\maketitle
 	
 	\section*{Use Case Scenario}
-We want to implement a bank system, whether the threads are
-either clients logging to the servers, or the bank server containing
-the information for each account. Each client interacts with the server through the \texttt{BankFacade} by accessing an \texttt{openTransaction} method, through which the each client can create multiple accesses to its bank account. This mimicks the possibility of multitasking operations via mobile phone, ATM, web banking. Each client can only \textsf{pay} or \textsf{withdraw} money, and gets the list of the total movements after \textsf{commit}-ting the operation. In a realistic scenarios, transactions might also \textsf{abort}; e.g.:
-\begin{itemize}
-\item The ATM receives the request of money, but the server fails and does
-not deduct the money from the on-line account.
-\item The server fails after deducting the from the on-line account, but no
-money is given at the ATM
-\end{itemize}
-Still, all of the operations done by the thread over the specific bank account will be confirmed and will become effective only when the transaction is going to be \textbf{commit}ted. After a commit or an abort, no further operation through that transaction is allowed, thus requiring the user to open another transaction within the same thread. More details on the operations' requirements are given in the final marking scheme.
+We want to implement a virtual shopping system, whether the threads are
+either clients using the web app, or clients buying products on the physical shop using the mobile app. The lifecycle of any client interaction is summerised by \texttt{ClientLifecycle}: Each client interacts with the shop through the \texttt{RainforestShop} via the \texttt{login} method, through which each client can add items to its basket and perform re-shelving operations (moving the items back to the physical/virtual shelf from the basket). Each client can get a list of available items at the time of the query, basket a given product by name, (re)shelf the product (thus removing it from the basket), checkout and proceed with the payment (thus either buying all the items on the basket or none of those entirely), and logging out of the system while losing the information of all the items being previously put in the basket from the real/virtual shelf (thus entailing implicit re-shelving).
+
+
+{Each time an allowed user logs in, a non-empty transaction will be created with an unique transaction ID. The unavailability of the product shall be confirmed not while basketing the items, rather than after purchasing those. At this stage, the shop supplier (\texttt{SupplierLifecycle}) might be notified that some products are missing (\texttt{getNextMissingItem}) and refurbish the show with a non-zero amount of products of the same type (\texttt{refurbishWithItems}). For simplicity sake, the \texttt{refurbishWithItems} method will be in charge of creating the number of desired product and to place them on the shelf. }
 
 
 As in any industrial setting where teams split up the duties,
-you are assigned an API that you need to implement. Such an API is provided both on Canvas and at \url{https://github.com/jackbergus/NCL_CSC8016}. This will then require to extend the \texttt{BankFacade} for implementing the definition of novel transactions, and the implementation of \texttt{TransactionCommands} for performing the client-server communication. The student is free to choose whichever is the best way to make these two entities communicate. E.g., the bank could be either modelled as a finer-grained monitor, but inside this monitor at least one thread per logged user should be running; also, such a bank could be also implemented as a consumer threads handling all of the clients' messages. 
+you are assigned an API that you need to implement. Such an API is provided both on Canvas and at \url{https://github.com/jackbergus/NCL_CSC8016/tree/main/src/main/java/uk/ncl/CSC8016/jackbergus/coursework/project2}. This will then require to finalise the implementation of  \texttt{RainforestShop} and the integration of concurrency mechanisms in \texttt{ProductMonitor}; the \texttt{Transaction} class shall not be changed! The \texttt{Testing} solves a twofold task: showing how Clients, Suppliers, and the Shop system are communicating, as well as providing some preliminary guidelines on how the coursework is going to be assessed. The student is free to choose whichever is the best way to pass the tests (not fully disclosed to the students) in the \texttt{Testing} class. E.g., the RainforestShop could be either modelled as a finer-grained monitor, but inside this monitor at least one thread per logged user should be running; also, such a RainforestShop could be also implemented as a consumer threads handling all of the clients' messages. 
 	
 	
 	\section*{Assumptions}
 	\begin{itemize}
-		\item In a realistic example, communications happen between processes via UDP messages. In this module, we don't require that. We can freely assume that each client (ATM, OnLine Banking) is mimicked by one single
+		\item In a realistic example, communications happen between processes via UDP messages. In this module, we don't require that. We can freely assume that each client (Physical person buying items in the show using the mobile app, OnLine Shopper) is mimicked by one single
 		thread. We assume they directly exploit such an interface (no
 		FrontEnd is required!)
-		\item  If the bank is implemented as a server, such a thread might receive the ``client messages'' through shared
+		\item  If the RainforestShop is implemented as a server, such a thread might receive the ``client messages'' through shared
 		variables. 
-		\item The server should also keep track of the transactions
-		that are performed for handling commit/abort correctly. You are not required to tolerate the server crash (this is more of
+		\item The RainforestShop already comes with a Transaction class  keeping track of the transactions
+		that are performed for handling basketing operations. You are not required to tolerate the server crash (this is more of
 		a back-up task rather than a concurrent programming one), but
-		you must tolerate the client ones (that is more related to
-		concurrent programs’ management)!
-		\item We assume that the \texttt{BankFacade} class is initialized with the users having an account in their bank as well as the balance associated to that (constructor with \texttt{HashMap<String, Double>}). The system should not allow to open/close new bank accounts.
-		\item The server should allow multiple users logging in running contemporarily on distinct bank account. In order to maximise seriality and concurrency requirements, the students might investigate \textit{optimistic protocols} for transactions, but this is not strictly required.
-		\item The actual implementation provided both in Canvas and on GitHub provides incorrect solutions for the following reasons:
+		you must correcly handle client log outs (withdrawn items from the shelves after log-out should be automatically re-shelved with a cookie-free assumption, where the basket is not ``rembered'' after re-logging in)!
+		\item We assume that the \texttt{RainforestShop} class is initialized with the users allowed to shop using the mobile app or OnLine website  (\texttt{Collection<String> client\char`_ids}), the association between the name of the product (\texttt{String}), its cost (\texttt{Double}) and a non-zero \texttt{Integer} number of available items to purchase (\texttt{Map<String, Pair<Double, Integer>> available\char`_products}). The students are encouraged to change the \texttt{studentId} so to return their student ID, as well as setting \texttt{isGlobalLock} to \textbf{true} if the students use a pessimistic protocol, and \textbf{false} otherwise. in The system should not allow to register/unroll new users/shoppers. 
+		\item The server should allow a single user contemporarily loggin in with the same username \textbf{as far as different transaction IDs are given to distinguish different concurrent operations}. In order to maximise seriality and concurrency requirements, the students might investigate \textit{optimistic protocols} for transactions, but this is not strictly required.
+		\item A solution might be deemed incorrect for the following reasons:
 		\begin{enumerate}
-		\item The execution of the process is \textbf{wrongly} \underline{always} sequential, as
-		one client always blocks the other clients from
-		accessing the bank!
-		\item Client's crashes are \textbf{wrongly} \underline{not} tolerated, as those are always committing the operations to then
-		main log without checking whether the action was
-		effectively performed or not!
-		\item Somehow, the computations are ``logically'' correct, that is \textsf{pay}, \textsf{withdraw}, \textsf{commit}, and \textsf{abort} implement the expected semantics. Still, this is not sufficient for passing the coursework with full marks. 
+		\item Products that were originally basketed cannot be bought any more (e.g., both users attempted to basket a product but only one of them was able to buy it).
+	\item The same product name with the same product id cannot be bought multiple times.
+
+		\item Somehow, the computations are ``logically'' correct with single-threaded scenarios, that is \textsf{basket}, \textsf{reshelf}, \textsf{checkout}, and \textsf{logout} implement the expected semantics. Still, this is not sufficient for passing the coursework with full marks. 
 		\end{enumerate}
 	\end{itemize}
 	
 	\section*{Submission Requirements}
 	\begin{enumerate}
-		\item \texttt{BankFacade} and \texttt{TransactionCommands} should be extended.
+		\item \texttt{RainforestShop} and \texttt{ProductMonitor} should be finalised, as the current implementation does not pass the provided tests!
 		\item Submit the code as a zipped \textit{Maven} project. with \textbf{no} \textit{jar} and \textit{classes}. The source code will be recompiled from scratch, and no jar/class is going to be run.
 		 
 		\item If you want to use an external Java library, please consider the following:
@@ -87,82 +79,102 @@ you are assigned an API that you need to implement. Such an API is provided both
 			\item If unsure whether the solution might be exploited, please ask before submitting.
 		\end{itemize}
 		 
-		\item Attached to the source code, please provide a short report motivating the compliance of the source code to each point and sub-point of the marking scheme. The report should also state what is the name of the class of the class extending \texttt{BankFacade} and its package.
+		\item Attached to the source code, please provide a short report motivating the compliance of the source code to each point and sub-point of the marking scheme. Providing such report in form of comments in the implementation is also fine. New classes might be created for supporting the implementation, but  existing classes should be neither renamed or moved to a different package.
 		
-		\item At the zip's root, please write a \textit{classinfo.txt} file containing the package and class information to the class extending \texttt{BankFacade}. E.g., \\
-		
-		uk.ncl.CSC8016.jackbergus.coursework.wrongimplementation.WrongBankWithLocks
-
 	\end{enumerate}
 
 
-	\section*{Marking Scheme}
+	\section*{Marking Scheme} 
+\renewcommand{\labelitemii}{$\blacksquare$}
 	The marking scheme is capped at  \textbf{100\%}.
 	\begin{itemize}
-		\item Single-Thread Correctness \textbf{[+50\%]}
+		\item Single-Thread Correctness \textbf{[+52\%]}
 			\begin{description}
-			\item [+10\%:] I cannot open a transaction if the user does not appear in the initialization map.
-			\item [+10\%:] I can always open a transaction if the user, on the other hand, appears on the initialization map.
-			\begin{itemize}
-				\item The returned \texttt{totalAmount} reflect the amount that was committed.
-			\end{itemize}
-			\item [+15\%:] After committing a transaction, the results provides the total changes into the account.
-			\begin{itemize}
-				\item The returned commit information should contain at least one \textit{Operation} of \textit{OperationType}.
-				\item After paying money into the account, the final total amount is the sum of the previous amount of money and the amount being paid.
-				\item I cannot re-commit or abort a closed transaction.
-				\item The successful operations should contain all of the operations before the commit, as well as the commit.
-			\end{itemize}
-			\item [+15\%: ] No overdraft is allowed.
-			\begin{itemize}
-				\item I can always withdraw $0.0$ money from my account.
-				\item I can never withdraw an amount of money which is greater than the amount at my disposal.
-				\item The commit should list all of the operations, thus including the attempt to overdraft.
-				\item The operation causing the overdraft shall not consider as an unsuccessful operation, rather than an \textit{ignored} one.
-			\end{itemize}
-	
+			\item [+4\%:] I cannot open a transaction if the user does not appear in the users' collection.
+\begin{itemize}
+\item (You) cannot login (and therefore, start a transaction) if a user is not listed (no user appearing in the initial RainforestShop collection).
+\item Cannot login (and therefore, start a transaction) if a user is not listed (User not appearing in the RainforestShop collection).
+\end{itemize}
+			\item [+3\%:] I can always open a transaction if the user, on the other hand, appears on the users' collection.
+
+\item [+7\%:] I cannot log-out multiple times using the same transaction, but it should be possible to re-log in, and the novel transaction shall have a different id.
+\begin{itemize}
+\item Can immediately log-out after logging in on the same transaction.
+\item Logging out multiple times on the same transaction is not permitted (returns false).
+\item The same user can open multiple transactions (not necessarily being contemporarily open).
+\item Each transaction opened by the user should come with a distinct transaction id.
+\end{itemize}
+\item [+7\%:] I must neither basket nor purchase unavailable products.
+\begin{itemize}
+\item Cannot basket items when the map is empty.
+\item Cannot basket items not listed in the map.
+\item Cannot basket more items than specified in the map.
+\item Can basket available products.
+\item Can shelf previously-basketed products.
+\item Can re-basket a product that was previously shelved.
+\item After the last point, I cannot re-basket the same item another time.
+\end{itemize}
+\item [+3\%:] Logging out automatically re-shelves all the remaining product non-purchased in the basket, and therefore it shall be possible to re-basket the products.
+\item [+3\%: ] Logging out should also automatically disable all the remaining operations available through the transaction (mainly \texttt{basketProduct}, \texttt{shelfProduct}, and \texttt{basketCheckout}).
+\item [+20\%: ] Correctly purchasing the available items (single-threaded).
+\begin{itemize}
+\item It should be possible to basket checkout when the basket is empty, with any given amount of money
+\item After successfully purchasing one item, the checkout returns the correct information.
+\item After successfully purchasing two items, the checkout returns the correct information.
+\item When attempting to purchase three items where only two are available, the checkout correctly purchases two items.
+\end{itemize}
+\item [+5\%:] Correctly shelving the products.
+\begin{itemize}
+\item Cannot shelf a product that did not originally exist.
+\item Cannot shelf a product that was not basketed (empty basket).
+\item Cannot shelf a product that was not basketed (non-empty basket).
+\item Can shelf a product that was originally basketed.
+\end{itemize}
 		\end{description}
 
 
-	\item  Multi-Threaded Correctness \textbf{[+40\%]}
+	\item  Multi-Threaded Correctness \textbf{[+38\%]}
 \begin{description}
-	\item [+10\%:] A single user can open concurrent transactions.
-	\begin{itemize}
-		\item As other concurrent transactions are not committed yet, each thread can only see the committed statues from their account.
-		\item Any user should be allowed to concurrently log in in its account (e.g., through different possible devices).
-		\item Absence of \textbf{write-write} conflicts.
-		\item Under the assumption that user's threads never abort, the final amount of the money in the bank account correspond to the overall total of pays and withdraws.
-	\end{itemize}
-	\item [+10\%:] Multiple users can open concurrent transactions. \textit{[Same requirements as above, plus the following:]}
+	\item [+6\%:] The same user can log-in multiple times.
 \begin{itemize}
-	\item Different users should never run serially, as they operate on different accounts (The code unrealistically assumes that neither  pay other accounts nor receive money from them).
+\item The same user can open multiple transactions (contemporarily open).
 \end{itemize}
-\item [+10\%:] No dirty reads allowed.
+\item [+6\%: ] Two threads shall never be able (in any possible run) to contemporary access to the same object on the shelf.
+\item [+5\%: ] A client running without a supplier shall always dispose the available resources.
 \begin{itemize}
-	\item A thread shall never see in the total account balance after the commit the amount of money being paid/withdrawn before other threads' commits.
-	\item A thread shall never be able to withdraw money paid by other non-committing threads. 
-	\item Ignored operations should consider the unsuccessful withdraws from the account.
-\end{itemize} 
-\item [+10\%:] Handing aborted transactions:
+\item In particular, a \texttt{ClientLifecycle} should be able to buy all the available elements if given an adequate amount of money.
+\end{itemize}
+\item [+6\%: ] Correct Client/Shop/Supplier interaction. This might be tested with at least one \texttt{ClientLifecycle} and one \texttt{SupplierLifecycle} running.
 \begin{itemize}
-	\item Operations from aborted transactions should be completely ignored/reversed.
-	\item In particular, aborted threads should leave the bank in a consistent state, so further transactions run as expected.
+\item The supplier shall not be triggered if the products are basketed but not bought (as they can be later on re-shelved).
+\item The supplier shall be triggered when a shelf for a given product is emptied.
+\item After refurbishment, a client shall be able to buy at least one more product.  
+\end{itemize}
+\item [+12\%: ] Correct Client/Client interaction (two distinct users and two transactions from the same user).
+\begin{itemize}
+\item The clients bought the maximum number of available items.
+\item The clients bought 3 distinct items.
+\item The clients cannot contemporarily buy the same item.
+\end{itemize}
+\item [+3\%: ] Correct Supplier Stopping.
+\begin{itemize}
+\item The supplier is stopped by receiving a \texttt{@stop!} message only when the \texttt{stopSupplier} method is invoked. 
+\item Currency is handled correctly.
 \end{itemize}
 \end{description}
 
 
-\item Advanced Features
+\item  Advanced Features
 \begin{itemize}
-	\item  \textbf{[+1\%]} The bank is emulated realistically as a separated thread.
+	\item  \textbf{[+5\%]} The RainforestShop is emulated realistically as a separate thread.
 	\item  \textbf{[+1\%]} The code exploits Java's concurrent collections.
 	\item \textbf{[+1\%]} The program allows to visually determine the correctness of the operations performed by the threads (e.g., terminal prints or graphical user interfaces).
-	\item \textbf{[+1\%]} The student correctly exploits semaphores.
-	\item  \textbf{[+2\%]} A thread perceives the updated account balance as soon as any of the remaining concurrent thread is committed.
-	\item \textbf{[+2\%]} The student exploited the optimistic transaction principle, and the operations were logged in a journal (either in primary memory or in secondary memory).
-	\item \textbf{[+2\%]} Usage of monitors or multithreaded producers and consumers (semaphores might be also exploited).
+\item \textbf{[+1\%]} The student correctly uses ReentrantLocks and Conditions.
+	\item \textbf{[+2\%]} The student correctly exploits semaphores.
+	\item \textbf{[+2\%]} The student exploited the optimistic transaction principle, where multiple users can log-in (not only the same user multiple times!).
+	\item \textbf{[+2\%]} Usage of monitors or multithreaded producers and consumers on the interaction with the supplier (semaphores might be also exploited).
 	\item \textbf{[+3\%]} Thread pools are used to handle multiple requests from multiple users.
-	\item \textbf{[+3\%]} Any Java library imported via \texttt{pom.xml} `not violating the 3\textsuperscript{rd} Submission Requirement.
-	\item  \textbf{[+4\%]} In addition to the previous point, bank thread crashes are also tolerated, e.g., all of the transactions are assumed to be aborted, and the bank journal is stored on disk. 
+	\item \textbf{[+3\%]} Any Java library imported via \texttt{pom.xml} `not violating the 3\textsuperscript{rd} Submission Requirement. 
 \end{itemize}
 	\end{itemize}
 
