--- a/src/main/java/uk/ncl/CSC8016/jackbergus/coursework/project1/marking_scheme2122.tex
+++ b/src/main/java/uk/ncl/CSC8016/jackbergus/coursework/project1/marking_scheme2122.tex
@@ -73,7 +73,7 @@ you are assigned an API that you need to implement. Such an API is provided both
 	
 	\section*{Submission Requirements}
 	\begin{enumerate}
-		\item \texttt{BankFacade} and \texttt{TransactionCommands} should be extended.
+		\item \texttt{Solution} should be the only class to be implemented.
 		\item Submit the code as a zipped \textit{Maven} project. with \textbf{no} \textit{jar} and \textit{classes}. The source code will be recompiled from scratch, and no jar/class is going to be run.
 		 
 		\item If you want to use an external Java library, please consider the following:
@@ -89,9 +89,9 @@ you are assigned an API that you need to implement. Such an API is provided both
 		 
 		\item Attached to the source code, please provide a short report motivating the compliance of the source code to each point and sub-point of the marking scheme. The report should also state what is the name of the class of the class extending \texttt{BankFacade} and its package.
 		
-		\item At the zip's root, please write a \textit{classinfo.txt} file containing the package and class information to the class extending \texttt{BankFacade}. E.g., \\
-		
-		uk.ncl.CSC8016.jackbergus.coursework.wrongimplementation.WrongBankWithLocks
+%		\item At the zip's root, please write a \textit{classinfo.txt} file containing the package and class information to the class extending \texttt{BankFacade}. E.g., \\
+%		
+%		uk.ncl.CSC8016.jackbergus.coursework.wrongimplementation.WrongBankWithLocks
 
 	\end{enumerate}
 
